# notion-sync

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  console.toml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 85f1cd1ec781_initial_schema.py  c4e7f21a9b3d_add_sync_item_hashes.py  d9e3f4a5b6c7_drop_sync_item_hashes.py  e64d985dbe6e_rename_external_integrations_to_sis_.py  f1a2b3c4d5e6_add_widgets.py
scripts/: find_paths.py  probe_blocks.py  seed_self.py
src/: config.py  logging.py  main.py  models.py  views_registry.py
src/auth/: middleware.py  notion_oauth.py  routes.py  sessions.py
src/clients/: canvas.py  external_client.py  notion.py  notion_props.py  sis_client.py
src/db/: __init__.py  encryption.py  models.py  repositories.py  session.py
src/handlers/: common.py  refresh.py  sync_assignments.py  sync_courses.py
src/operations/: assignments.py  courses.py  semesters.py
src/template/: config.py  follower.py  models.py  paths.json  steps.py
src/web/: routes.py  services.py
src/web/static/: app.css
src/web/templates/: activity_feed.html  activity_page.html  base.html  canvas_delete_confirm.html  canvas_form.html  canvas_integrations.html  dashboard.html  index.html  integrations_section.html  logs_page.html  skyline_cover.html  widget.html  widget_edit.html  widget_unlock.html  widgets.html
src/web/templates/integrations/: card.html  delete_confirm.html  picker.html
src/webhooks/: common.py  refresh.py  sync_assignments.py  sync_courses.py
(+1 files in other folders)
